File.lastModifiedDate() should return the current date/time if the file date/time is not available https://bugs.webkit.org/show_bug.cgi?id=111403

Reviewed by Kent Tamura.

Source/WebCore:

Per the recent File API spec change:
http://www.w3.org/TR/2012/WD-FileAPI-20121025/#dfn-lastModifiedDate

Test: http/tests/local/fileapi/script-tests/file-last-modified-after-delete.js:

* fileapi/File.cpp:
(WebCore::File::lastModifiedDate): Changed to return the current date/time instead null if the valid file date/time is not available.
* fileapi/File.h:
(File):

LayoutTests:

* http/tests/local/fileapi/file-last-modified-after-delete-expected.txt: Updated.
* http/tests/local/fileapi/script-tests/file-last-modified-after-delete.js: Updated.

Canonical link: https://commits.webkit.org/130039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145035 268f45cc-cd09-0410-ab3c-d52691b4dbfc